--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="Assignment3.App"
+﻿<Application x:Class="LearningLog2024.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Assignment3"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:LearningLog2024"
+             StartupUri="EntryWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
